# ethsignminitrezor

./: CMakeLists.txt  README.md
include/: ecdsa.h  secp256k1.h
src/: ecdsa.c  main.c
